# computational_biology

SIR/: CMakeLists.txt  Readme.md  build.sh  clean.sh  genlhsmatrix.txt  lhsdata  lhsmatrix  lhsoutcome  main.cpp  prcc.sh  readme.md
example/: main.cpp  main.pl
traffic-simulation/: CMakeLists.txt  build.sh  main.cpp  main.pl  readme.md
traffic-simulation/assets/: video.webm
